# hifi

assignment-client/src/avatars/: AvatarMixerSlave.cpp
interface/src/: Application.cpp  Application_render.cpp  Menu.cpp  SecondaryCamera.cpp  SecondaryCamera.h
interface/src/avatar/: AvatarManager.cpp  AvatarManager.h
interface/src/raypick/: ParabolaPointer.cpp
libraries/avatars/src/: AvatarData.cpp  AvatarData.h  AvatarHashMap.cpp  AvatarHashMap.h
libraries/entities-renderer/src/: RenderableEntityItem.cpp  RenderableEntityItem.h  RenderableLineEntityItem.cpp  RenderablePolyLineEntityItem.cpp  RenderableShapeEntityItem.cpp  RenderableTextEntityItem.cpp  RenderableWebEntityItem.cpp  paintStroke.slf  paintStroke.slv  paintStroke_fade.slf  paintStroke_fade.slv  polyvox.slf  polyvox.slv  polyvox_fade.slf  polyvox_fade.slv  textured_particle.slf  textured_particle.slv
libraries/graphics/: CMakeLists.txt
libraries/image/: CMakeLists.txt
libraries/image/src/image/: CubeMap.cpp  CubeMap.h  Image.cpp
libraries/render-utils/src/: AmbientOcclusionEffect.cpp  AntialiasingEffect.cpp  AntialiasingEffect.h  BackgroundStage.cpp  BackgroundStage.h  BloomApply.slf  BloomEffect.cpp  BloomThreshold.shared.slh  BloomThreshold.slf  DebugDeferredBuffer.cpp  DebugDeferredBuffer.h  DeferredBuffer.slh  DeferredBufferRead.slh  DeferredBufferWrite.slh  DeferredBufferWrite_shared.slh  DeferredFrameTransform.cpp  DeferredFrameTransform.h  DeferredFramebuffer.cpp  DeferredFramebuffer.h  DeferredLightingEffect.cpp  DeferredLightingEffect.h  Haze.slf  (+194 more)
libraries/shaders/: CMakeLists.txt
(+113 files in other folders)
